--- a/src/assets/style/newslist.css
+++ b/src/assets/style/newslist.css
@@ -1,5 +1,5 @@
 .news-list-container {
-    background-color: rgb(245, 238, 238);
+    /* background-color: rgb(245, 238, 238); */
     padding: 4rem 7em;
 }
 
