--- a/src/assets/style/newsheader.css
+++ b/src/assets/style/newsheader.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     line-height: 2;
-    background-color: white;
+    /* background-color: rgb(163, 154, 154); */
     padding: 3rem;
 
 }
