--- a/src/assets/style/TopSymbolsList.css
+++ b/src/assets/style/TopSymbolsList.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    background-color: white;
 }
 
 @media screen and (max-width: 500px) {
