--- a/src/assets/style/newsheader.css
+++ b/src/assets/style/newsheader.css
@@ -1,8 +1,8 @@
 .news-header__container {
     display: grid;
     grid-template-columns: 50% 50%;
-    min-height: 60vh;
-    
+    min-height: 70vh;
+    padding-top: 6rem; 
 
 }
 
@@ -20,8 +20,9 @@
     justify-content: center;
     align-items: center;
     line-height: 2;
-    /* background-color: rgb(163, 154, 154); */
+    background-color: rgb(250, 243, 243); 
     padding: 3rem;
+    color: var( --color-primary-dark);
 
 }
 
