--- a/src/assets/style/topgainer.css
+++ b/src/assets/style/topgainer.css
@@ -5,6 +5,9 @@
     justify-content: center;
     align-items: center;
     line-height: 1.7;
+    box-shadow: 0 1rem 2rem rgba(68, 68, 64, 0.3);
+    margin: .6rem;
+
 }
 
 .top-gainer__img {
@@ -25,6 +28,14 @@
 @media screen and (max-width: 1024px) {
     .top-gainer__container {
         padding: 2rem 1rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+   
+    .top-gainer__img {
+        width: 15%;
+    
     }
 }
 
