--- a/src/components/ExchangesTable/style.scss
+++ b/src/components/ExchangesTable/style.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     thead {
         position: fixed;
-        top: 1%;
+        top: 13%;
         left: 0%;
         margin-bottom: 6rem;
         width: 100vw;
@@ -18,6 +18,7 @@
       margin-top: 3rem;
     }
     &__wrapper {
+      margin-top: 3.5rem;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       justify-items: stretch;
