--- a/src/components/CryptoTableCell/style.scss
+++ b/src/components/CryptoTableCell/style.scss
@@ -44,7 +44,7 @@
 @media screen and (max-width: 500px) {
   .cell {
     padding: 0;
-    grid-template-columns: 24% 14% 27% 11% 26%;
+    grid-template-columns:  8.5% 19% 16% 15% 14% 15% 12%;;
 
     &__item {
       width: 9rem;
