--- a/src/components/MainTable/style.scss
+++ b/src/components/MainTable/style.scss
@@ -14,3 +14,10 @@
     padding-top: 10%;
   }
 }
+@media screen and (max-width: 500px) {
+  .crypto-container {
+  thead {
+    top: 5%;
+  }
+  }
+}
