--- a/src/components/NavbarToggler/style.scss
+++ b/src/components/NavbarToggler/style.scss
@@ -70,10 +70,11 @@
 
 @media screen and (max-width: 500px) {
   .toggle-wrapper {
-    margin-left: 80vw;
+    margin-left: 76vw;
   }
-
+}
+@media screen and (max-width: 320px) {
   .toggle-wrapper {
-    margin-left: 80vw;
+    margin-left: 72vw;
   }
 }
