--- a/src/components/ThemedButton/style.scss
+++ b/src/components/ThemedButton/style.scss
@@ -1,3 +1,16 @@
 .switch-theme__btn {
   cursor: pointer;
 }
+.show-hide-text {
+  display: none;
+  
+}
+
+@media screen and (max-width: 1024px) {
+  .show-hide-text {
+    display: inline-block;
+    color: white;
+    font-size: var(--font-size-mediumbig);
+    margin-left: .5rem;
+  }
+}
