--- a/src/components/ExchangeItem/style.scss
+++ b/src/components/ExchangeItem/style.scss
@@ -2,13 +2,9 @@
     height: 20em;
     width: 17rem;
     border: 1px solid #f8f7f7;
-    padding: 1rem 1rem;
+    padding: 0 1rem;
     border-radius: 15px;
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.97),
-        rgba(255, 255, 255, 1)
-      ),
-      url('https://images.pexels.com/photos/844124/pexels-photo-844124.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.97), white), url(https://images.pexels.com/photos/844124/pexels-photo-844124.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
     background-position: center;
     background-size: cover;
     display: grid;
@@ -16,8 +12,8 @@
     justify-items: center;
     align-items: center;
     width: 83vw;
-    height: 8rem;
-    margin: 1rem;
+    height: 7rem;
+    margin: .2rem;
     &__wrapper {
       display: flex;
       flex-direction: column;
@@ -57,8 +53,10 @@
       font-family: 'Lato';
     }
     &__view {
-      text-decoration: none;
-      margin-top: 1rem;
+      a {
+        text-decoration: none;
+        margin-top: 1rem;
+      }
     }
   }
   
@@ -74,16 +72,15 @@
   
   @media screen and (max-width: 500px) {
     .exchange {
-      height: 37em;
+      height: 16em;
       width: 50rem;
       padding: 2rem 1.5rem;
+      grid-template-columns: repeat(7, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      &__view {
+          grid-column: 4/5;
+      }
     }
   }
   
-  @media screen and (max-width: 320px) {
-    .exchange {
-      height: 37em;
-      width: 41.5rem;
-    }
-  }
   
