--- a/src/components/ExchangeTableCell/style.scss
+++ b/src/components/ExchangeTableCell/style.scss
@@ -1,7 +1,7 @@
 .cell {
     padding: 1rem;
     display: grid;
-    grid-template-columns: 17.5% 13% 10% 9% 11% 10% 9%;  
+    grid-template-columns: 17.5% 13% 7% 15% 5% 15% 6%;  
     justify-items: center;
     align-items: center;
     list-style: none;
@@ -16,6 +16,14 @@
       width: 10rem;
       font-size: var(--font-size-small);
       z-index: 0;
+      button {
+        background: none;
+        border: none;
+        cursor: pointer;
+        :active {
+          outline: none
+        }
+      }
       i {
         margin-left: 0.4rem;
         display: inline-block;
@@ -36,19 +44,34 @@
         top: -57%;
         left: 32%;
         cursor: pointer;
-        opacity: 0;
+        opacity: 1;
       }
     }
   }
   
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 768px) {
     .cell {
       padding: 0;
-      grid-template-columns: 24% 14% 27% 11% 26%;
+      grid-template-columns: 22% 7% 13% 9% 9% 12% 9%;
   
       &__item {
         width: 9rem;
         box-shadow: none;
+      }
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .cell {
+      padding: 0;
+      grid-template-columns: 20% 5% 21% 7% 21% 7% 18%;
+  
+      &__item {
+        width: 9rem;
+        box-shadow: none;
+        flex-direction: column;
+        i {
+          // display: none;
+        }
       }
     }
   }
