--- a/src/components/TopGainerItem/style.scss
+++ b/src/components/TopGainerItem/style.scss
@@ -39,5 +39,8 @@
     .top-gainer__img {
       width: 15%;
     }
+    .top-gainer__details {
+      font-size: var(--font-size-verysmall);
+  }
   }
   
