--- a/src/pages/Crypto/style.scss
+++ b/src/pages/Crypto/style.scss
@@ -1,7 +1,15 @@
-.view-crypto {
+.view-crypto-container {
   display: grid;
   grid-template-columns: 15% 70% 15%;
   align-items: center;
   padding: 6rem 0;
   position: relative;
+  min-height: 100vh;
+}
+@media screen and (max-width: 500px) {
+  .view-crypto-container {
+    grid-template-columns: 5% 90% 5%;
+    padding: 9rem 0;
+  }
+
 }
