--- a/src/pages/Exchange/style.scss
+++ b/src/pages/Exchange/style.scss
@@ -1,10 +1,23 @@
-.view-exchange {
+.view-exchange-container {
     display: grid;
     grid-template-columns: 15% 70% 15%;
     align-items: center;
     padding: 6rem 0;
     position: relative;
-  
   }
+@media screen and (max-width: 1024px) {
+  .view-exchange-container {
+    padding: 16rem 0;
+  }
+} 
+@media screen and (max-width: 500px) {
+  .view-exchange-container {
+    grid-template-rows: 5% 90% 5%;
+    grid-template-columns: 1fr;
+    padding: 5rem 0;
+   &__next {
+   }
+}
+}
 
   
